# spsdk_plugins

./: .gitignore  README.md  SBOM-spsdk_plugins.spdx.json  SW_Content_Register_SPSDK_plugins.txt  coverity.yaml  noxfile.py  project-words.txt  pyproject.toml
.github/workflows/: deploy.yml  python-ci.yaml  python-ci.yml
codecheck/: .editorconfig  .gitignore  MANIFEST.in  README.md  SBOM-spsdk_plugins_codecheck.spdx.json  SW_Content_Register_codecheck.txt  approved_packages.json  pyproject.toml  requirements.txt  requirements_dev.txt
codecheck/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
codecheck/.github/workflows/: docs-build.yml  installation.yml
codecheck/codecheck/: __init__.py  checker_copyright_year.py  checker_cyclic_import.py  checker_dependencies.py  checker_jupyter.py  checker_mypy_annotations.py  checker_py_headers.py  checker_pydocstyle.py  default_cfg.yaml  git_operations.py  gitcov.py  main.py  task_scheduler.py
codecheck/tests/: __init__.py  conftest.py  test_codecheck.py  test_copyright.py  test_dependencies.py
iped/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SBOM-spsdk_plugins_iped.spdx.json  approved_packages.json  pyproject.toml  setup.py
iped/spsdk_iped/: __init__.py  iped.py
iped/src/: PrinceCore.cpp  PrinceCore.h  ip_prince_ctr.cpp  ip_prince_ctr.h  ip_prince_model.cpp  iped_model_c.h
iped/tests/: test_iped.py
jlink/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_jlink.spdx.json  SW_Content_Register_spsdk_jlink.txt  approved_packages.json  pyproject.toml
jlink/.github/: ISSUE_TEMPLATE.md
jlink/spsdk_jlink/: __init__.py  probe.py
jlink/tests/: __init__.py  test_integration.py
keyfactor/: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_keyfactor.spdx.json  SW_Content_Register_spsdk_keyfactor.txt  approved_packages.json  pyproject.toml  requirements_dev.txt
keyfactor/.github/: ISSUE_TEMPLATE.md
keyfactor/spsdk_keyfactor/: __init__.py  cli.py  provider.py
keyfactor/tests/: __init__.py  test_integration.py
lauterbach/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_lauterbach.spdx.json  SW_Content_Register_spsdk_lauterbach.txt  approved_packages.json  pyproject.toml
lauterbach/.github/: ISSUE_TEMPLATE.md
lauterbach/spsdk_lauterbach/: __init__.py  probe.py
lauterbach/tests/: __init__.py  test_plugin.py
mcu_link/: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_mcu_link.spdx.json  SW_Content_Register_spsdk_mcu_link.txt  approved_packages.json  cspell.config.yaml  pyproject.toml  tox.ini
mcu_link/.github/: ISSUE_TEMPLATE.md
mcu_link/spsdk_mcu_link/: __init__.py  probe.py
mcu_link/spsdk_mcu_link/__pyinstaller/: hook-spsdk_mcu_link.py
mcu_link/spsdk_mcu_link/dapper/: __init__.py  webix-dapper-wasm.wasm  webix_dapper.py  webix_dapper_wasm.py
mcu_link/spsdk_mcu_link/dapper/core/: __init__.py  arrays.py
mcu_link/spsdk_mcu_link/dapper/interfaces/: __init__.py  hid_interface.py  interface.py  usb_v1_interface.py  usb_v2_interface.py
mcu_link/tests/: __init__.py  test_hw_interaction.py  test_integration.py
offline_signature_provider/: LICENSE  README.md  SBOM-spsdk_plugins_offline_signature_provider.spdx.json  SW_Content_Register_spsdk_offline_signature_provider.txt  approved_packages.json  pyproject.toml
pemicro/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_pemicro.spdx.json  SW_Content_Register_spsdk_pemicro.txt  approved_packages.json  pyproject.toml
pemicro/.github/: ISSUE_TEMPLATE.md
pemicro/spsdk_pemicro/: __init__.py  probe.py
pemicro/spsdk_pemicro/__pyinstaller/: __init__.py  hook-spsdk_pemicro.py
pemicro/tests/: __init__.py  test_integration.py
pipeline/: Jenkinsfile-clr  Jenkinsfile-github-deploy  Jenkinsfile-linux  Jenkinsfile-macos  Jenkinsfile-nexus-deploy  Jenkinsfile-pr-check  Jenkinsfile-windows
pkcs11/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_pkcs11.spdx.json  SW_Content_Register_spsdk_pkcs11.txt  approved_packages.json  pyproject.toml
pkcs11/.github/: ISSUE_TEMPLATE.md
pkcs11/spsdk_pkcs11/: __init__.py  provider.py
pkcs11/spsdk_pkcs11/__pyinstaller/: hook-spsdk_pkcs11.py
pkcs11/tests/: __init__.py  test_integration.py
pqc/: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_pqc.spdx.json  SW_Content_Register_spsdk_pqc.txt  approved_packages.json  cspell.config.yaml  pyproject.toml  setup.py  tox.ini
pqc/.github/workflows/: build-wheels.yaml
pqc/ref/: CMakeLists.txt  sign.c  sign.h
pqc/ref/src/: CMakeLists.txt  oqs.h
pqc/ref/src/sig/ml_dsa/pqcrystals-dilithium-standard_ml-dsa-44-ipd_ref/: sign.c
pqc/ref/src/sig/ml_dsa/pqcrystals-dilithium-standard_ml-dsa-65-ipd_ref/: poly.c
pqc/ref/src/sig/ml_dsa/pqcrystals-dilithium-standard_ml-dsa-87-ipd_avx2/: poly.c
pqc/spsdk_pqc/: __init__.py  __main__.py  errors.py  liboqs_oqs.py  pkcs_utils.py  pqc.asn  pqc_asn.py  utils.py  wrapper.py
pqc/spsdk_pqc/__pyinstaller/: hook-spsdk_pqc.py
pqc/tests/: __init__.py  conftest.py  test_basic_dil3.py  test_split_hybrid.py
pqc/tests/data/: dil.pem  ecc.pem  hybrid.der  hybrid.pem
pylint_plugins/: LICENSE  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_pylint_plugins.spdx.json  SW_Content_Register_spsdk_pylint_plugins.txt  approved_packages.json  pyproject.toml
pylint_plugins/spsdk_pylint_plugins/: __init__.py  assert_isinstance_checker.py  click_choice_check.py  typing_checker.py
pylint_plugins/tests/: __init__.py  test_checkers.py  test_click_choice.py
pylint_plugins/tests/data/: assert_sample.py  click_sample.py  typing_sample.py
pyocd/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  SBOM-spsdk_plugins_pyocd.spdx.json  SW_Content_Register_spsdk_PyOCD.txt  approved_packages.json  cspell.config.yaml  pyproject.toml  requirements_dev.txt
pyocd/.github/: ISSUE_TEMPLATE.md
pyocd/spsdk_pyocd/: __init__.py  probe.py
pyocd/spsdk_pyocd/__pyinstaller/: hook-spsdk_pyocd.py
pyocd/tests/: __init__.py  test_integration.py
(+8 files in other folders)
