[project]
version = "3.1.0"
name = "spsdk_plugins"

[tool.release-tools]
disabled = ['docs']
sub_projects = [ "codecheck", "keyfactor", "jlink", "mcu_link", "lauterbach", "pemicro", "pkcs11", "pqc", "pylint_plugins", "pyocd", "offline_signature_provider"]

[tool.release-tools.scr]
scr_file = "SW_Content_Register_SPSDK_plugins.txt"

[tool.release-tools.github]
full_name = "nxp-mcuxpresso/spsdk_plugins"
base_branch = "main"

[tool.release-tools.blackduck_sca]
license = 'BSD 3-clause "New" or "Revised" License'

[tool.release-tools.clr]
disable_jira_upload = false