[project]
version = "3.10.0"
name = "spsdk_plugins"

[tool.release-tools]
disabled = ['docs', 'scr']
sub_projects = [
    "keyfactor",
    "jlink",
    "iped",
    "mcu_link",
    "lauterbach",
    "pemicro",
    "pkcs11",
    "pqc",
    "pylint_plugins",
    "pyocd",
    "offline_signature_provider",
]

[tool.release-tools.github]
full_name = "nxp-mcuxpresso/spsdk_plugins"
base_branch = "master"

[tool.release-tools.blackduck_sca]
license = 'BSD 3-clause "New" or "Revised" License'

[tool.release-tools.clr]
disable_jira_upload = false
