[project]
name = "nxp_codecheck"
description = "Simple set of checking tools for accepting code quality for NXP python projects"
dynamic = ["dependencies", "version"]

requires-python = ">=3.9"
keywords = ["spsdk_plugins", "codecheck", "nxp"]
authors = [{ name = "NXP" }]
maintainers = [{ name = "NXP", email = "michal.starecek@nxp.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD-3-Clause" }

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.entry-points."console_scripts"]
codecheck = "codecheck.main:main"
copyright = "codecheck.checker_copyright_year:main"
cyclic_import = "codecheck.checker_cyclic_import:main"
dependencies = "codecheck.checker_dependencies:main"
jupyter = "codecheck.checker_jupiter:main"
py_headers = "codecheck.checker_py_headers:main"
gitcov = "codecheck.gitcov:main"

[project.urls]
Homepage = "https://github.com/nxp-mcuxpresso/spsdk_plugins/tree/master/codecheck"
Issues = "https://github.com/nxp-mcuxpresso/spsdk_plugins/issues"


[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["codecheck"]

[tool.setuptools.dynamic]
version = { attr = "codecheck.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.bumpversion]
current_version = "0.3.10"

[[tool.bumpversion.files]]
filename = "codecheck/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "SW_Content_Register_codecheck.txt"
search = "{current_version}"
replace = "{new_version}"


[tool.pytest.ini_options]
testpaths = ["tests"]
junit_family = "xunit1"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "safe_main()", "sys.exit(main())"]

[tool.coverage.run]
relative_files = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pydocstyle]
convention = "google"
add_ignore = "D105,D301"
match = '(?!test_|__version__).*\.py'

[tool.pylint]
format = { max-line-length = 120 }
"messages control" = { disable = ["logging-fstring-interpolation", "R0801"] }

[tool.bandit]
# B101: Use of assert
# B404: Consider possible security implications associated with subprocess module.
skips = ["B101", "B404"]

[tool.py_headers]
excluded_files = []

[tool.copyright]
excluded_files = [".pre-commit-config.yaml", ".readthedocs.yml"]

[tool.gitcov]
skip-files = ""
repo-path = "."
module = "codecheck"
coverage-report = "reports/coverage.xml"
coverage-cutoff = 0.8
parent-branch = "origin/master"
include-merges = 0
verbose = 0
debug = 0
full-file-test = 0

[tool.nxp_codecheck]
git_parent_branch = "origin/master"
output_directory = "reports"
default_check_paths = ["codecheck"]
checkers = [
    { "pytest" = { kwargs = { disable_xdist = true } } },
    { "gitcov" = { info_only = true } },
    "pylint",
    "mypy",
    "dependencies",
    "pydocstyle",
    "ruff",
    { "radon_c" = { info_only = true } },
    "radon_d",
    "black",
    "isort",
    "copyright",
    "py_headers",
    { "cspell" = { info_only = true } },
    { "bandit" = { info_only = false, kwargs = { "severity-level" = "medium" } } },
]

[tool.release-tools.blackduck_sca]
project_name = "spsdk_plugins_codecheck"
include_detector_types = ["pip"]
sbom_location = "SBOM-spsdk_plugins_codecheck.spdx.json"

[tool.release-tools.scr]
scr_file = "SW_Content_Register_codecheck.txt"

[tool.release-tools.testpypi]
test_cmd = "codecheck --help"

[tool.release-tools.test_artifacts_collector]
install_hook = ["uv pip install .", "uv pip install -r requirements_dev.txt"]
