[project]
name = "spsdk_mcu_link"
description = "SPSDK MCU-Link. A debugger probe plugin for SPSDK supporting LPC-Link/MCU-Link from NXP."
dynamic = ["version"]

requires-python = ">= 3.9"
dependencies = [
    "wasmtime~=24.0.0",
    "pyusb~=1.2.1",
    "hidapi~=0.14.0.post2",
    "libusb_package",
]

authors = [{ name = "NXP" }]
maintainers = [{ name = "Kelnar Michal", email = "michal.kelnar@nxp.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD-3-Clause" }

keywords = ["NXP", "SPSDK", "mcu-link", "mculink", "CMSIS-DAP"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points]
"spsdk.debug_probe" = { mcu-link = "spsdk_mcu_link.probe" }
pyinstaller40 = { hook-dirs = "spsdk_mcu_link.__pyinstaller:get_hook_dirs" }

[project.urls]
Homepage = "https://github.com/nxp-mcuxpresso/spsdk_plugins/tree/master/mcu_link"
Issues = "https://github.com/nxp-mcuxpresso/spsdk_plugins/issues"


[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "spsdk_mcu_link",
    "spsdk_mcu_link.dapper",
    "spsdk_mcu_link.dapper.core",
    "spsdk_mcu_link.dapper.interfaces",
    "spsdk_mcu_link.__pyinstaller",
]
include-package-data = true

[tool.setuptools.package-data]
"spsdk_mcu_link.dapper" = ["*.wasm"]

[tool.setuptools.dynamic]
version = { attr = "spsdk_mcu_link.__version__" }

[tool.bumpversion]
current_version = "0.6.4"

[[tool.bumpversion.files]]
filename = "spsdk_mcu_link/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "SW_Content_Register_spsdk_mcu_link.txt"
search = "{current_version}"
replace = "{new_version}"

[tool.pytest.ini_options]
testpaths = ["tests"]
junit_family = "xunit1"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "safe_main()", "sys.exit(main())"]

[tool.coverage.run]
relative_files = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.mypy-spsdk-mcu-link.dapper.webix_dapper_wasm]
ignore_errors = true

[tool.radon]
exclude = "spsdk_mcu_link/dapper/webix_dapper_wasm.py"

[tool.pydocstyle]
convention = "google"
add_ignore = "D105,D301"
match = '(?!test_|__version__|webix_dapper_wasm).*\.py'

[tool.pylint]
format = { max-line-length = 120 }
"messages control" = { disable = ["logging-fstring-interpolation"] }
ignore = ["webix_dapper_wasm.py"]
max-attributes = 12

[tool.checker_dependencies]
root_package = "spsdk_mcu_link"
[tool.checker_dependencies.spdx]

"Apache-2.0" = [
    "Apache 2.0",
    "Apache-2.0 License",
    "Apache Software License 2.0",
    "Apache License, Version 2.0",
    "Apache License 2.0",
    "Apache Software License",
]
"BSD-2-Clause" = ["BSD 2-Clause License"]
"BSD-3-Clause" = [
    "BSD License",
    "BSD 3-Clause",
    "BSD (3 clause)",
    "BSD 3-Clause License",
    "Modified BSD License",
]
"MIT" = ["MIT License", "MIT license"]
"MPL-2.0" = ["MPL 2.0", "Mozilla Public License 2.0 (MPL 2.0)"]
"NLPL" = ["Public domain", "Public Domain"]
"PSF-2.0" = ["PSF", "PSFL", "Python Software Foundation License"]
"LGPL-3.0" = []
"LGPL-2.0" = ["GPL-2.0-or-later"]
"LGPL-2.1" = ["LGPL-2.1-or-later"]
"ISC" = ["ISC license"]
"Unlincense" = ["The Unlicense", "The Unlicense (Unlicense)"]

[tool.nxp_codecheck]
git_parent_branch = "origin/master"
output_directory = "reports"
default_check_paths = ["spsdk_mcu_link"]
checkers = [
    { "pytest" = { kwargs = { disable_xdist = true } } },
    { "gitcov" = { info_only = true } },
    "pylint",
    "mypy",
    "dependencies",
    "pydocstyle",
    "ruff",
    "cspell",
    { "radon_c" = { info_only = true } },
    "radon_d",
    "black",
    "isort",
    "copyright",
    "py_headers",
    { "bandit" = { info_only = true } },
]
[tool.copyright]
excluded_files = ["spsdk_mcu_link/dapper/*"]

[tool.release-tools.blackduck_sca]
project_name = "spsdk_plugins_mcu_link"
include_detector_types = ["setuptools"]
sbom_location = "SBOM-spsdk_plugins_mcu_link.spdx.json"

[tool.release-tools.scr]
scr_file = "SW_Content_Register_spsdk_mcu_link.txt"
