[project]
name = "spsdk-pylint-plugins"
description = "PyLint plugins coverity SPSDK-specific coding rules."
dynamic = ["version"]

requires-python = ">= 3.9"
dependencies = ["pylint>3", "astroid"]

authors = [{ name = "NXP" }]
maintainers = [{ name = "NXP", email = "michal.starecek@nxp.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD-3-Clause" }

keywords = ["NXP", "SPSDK", "PyLint", "Plugins"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/nxp-mcuxpresso/spsdk_plugins/tree/master/pylint_plugins"
Issues = "https://github.com/nxp-mcuxpresso/spsdk_plugins/issues"


[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spsdk_pylint_plugins"]

[tool.setuptools.dynamic]
version = { attr = "spsdk_pylint_plugins.__version__" }

[tool.bumpversion]
current_version = "0.2.2"

[[tool.bumpversion.files]]
filename = "spsdk_pylint_plugins/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "SW_Content_Register_spsdk_pylint_plugins.txt"
search = "{current_version}"
replace = "{new_version}"


[tool.pytest.ini_options]
testpaths = ["tests"]
junit_family = "xunit1"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "safe_main()", "sys.exit(main())"]

[tool.coverage.run]
relative_files = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pydocstyle]
convention = "google"
add_ignore = "D105,D301"
match = '(?!test_|__version__).*\.py'

[tool.pylint]
format = { max-line-length = 120 }
"messages control" = { disable = ["logging-fstring-interpolation"] }
load-plugins = ["spsdk_pylint_plugins"]


[tool.nxp_codecheck]
git_parent_branch = "origin/master"
output_directory = "reports"
default_check_paths = ["spsdk_pylint_plugins"]
checkers = [
    { "pytest" = { kwargs = { disable_xdist = true } } },
    { "gitcov" = { info_only = true } },
    "pylint",
    "mypy",
    "dependencies",
    "pydocstyle",
    "ruff",
    { "radon_c" = { info_only = true } },
    "radon_d",
    "black",
    "isort",
    "copyright",
    "py_headers",
    { "cspell" = { info_only = true } },
    { "bandit" = { info_only = false, kwargs = { "severity-level" = "medium" } } },
]

[tool.release-tools.blackduck_sca]
project_name = "spsdk_plugins_pylint_plugins"
include_detector_types = ["setuptools"]
sbom_location = "SBOM-spsdk_plugins_pylint_plugins.spdx.json"

[tool.release-tools.scr]
scr_file = "SW_Content_Register_spsdk_pylint_plugins.txt"
